// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings renders tabs correctly general 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={true}
      >
        <Link
          as="some/path/general"
          href="/settings?appSlug=some-app&selectedTab=general"
        >
          <a>
            General
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/notifications"
          href="/settings?appSlug=some-app&selectedTab=notifications"
        >
          <a>
            Notifications
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <Connect(General)
      appSlug="some-app"
    />
  </Base>
</Base>
`;

exports[`Settings renders tabs correctly notifications 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={false}
      >
        <Link
          as="some/path/general"
          href="/settings?appSlug=some-app&selectedTab=general"
        >
          <a>
            General
          </a>
        </Link>
      </Tab>
      <Tab
        active={true}
      >
        <Link
          as="some/path/notifications"
          href="/settings?appSlug=some-app&selectedTab=notifications"
        >
          <a>
            Notifications
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <Connect(NotificationSettings)
      appSlug="some-app"
    />
  </Base>
</Base>
`;

exports[`Settings renders tabs correctly other 1`] = `
<Base
  paddingVertical="x10"
>
  <Base
    maxWidth={960}
  >
    <Tabs
      gap="x10"
    >
      <Tab
        active={false}
      >
        <Link
          as="some/path/general"
          href="/settings?appSlug=some-app&selectedTab=general"
        >
          <a>
            General
          </a>
        </Link>
      </Tab>
      <Tab
        active={false}
      >
        <Link
          as="some/path/notifications"
          href="/settings?appSlug=some-app&selectedTab=notifications"
        >
          <a>
            Notifications
          </a>
        </Link>
      </Tab>
    </Tabs>
  </Base>
  <Divider
    color="gray-2"
    direction="horizontal"
    width="0.125rem"
  />
  <Base
    maxWidth={960}
  >
    <h1>
      other
    </h1>
  </Base>
</Base>
`;
